recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:1: error: Missing closing brace `}' assumed here
override def run() {
^FourSquare:1: error: expected start of definition
override def run() {
         ^FourSquare:6: error: Missing closing brace `}' assumed here
}
^